--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -160,14 +160,14 @@ jobs:
             make pull
             make stop
             make setup
-            echo ${{ secrets.DOCKER_CF_EMAIL }} > ./secrets/cf_email
-            echo ${{ secrets.DOCKER_CF_KEY }} > ./secrets/cf_key
-            echo ${{ secrets.DOCKER_DB_NAME }} > ./secrets/db_name
-            echo ${{ secrets.DOCKER_DB_PASSWORD }} > ./secrets/db_password
-            echo ${{ secrets.DOCKER_DB_USER }} > ./secrets/db_user
-            echo ${{ secrets.DOCKER_MAIL_ACCOUNT_PASSWORD }} > ./secrets/mail_account_password
-            echo ${{ secrets.DOCKER_REDIS_PASSWORD }} > ./secrets/redis_password
-            echo ${{ secrets.DOCKER_SESSION_SECRET }} > ./secrets/session_secret
+            echo "${{ secrets.DOCKER_CF_EMAIL }}" > ./secrets/cf_email
+            echo "${{ secrets.DOCKER_CF_KEY }}" > ./secrets/cf_key
+            echo "${{ secrets.DOCKER_DB_NAME }}" > ./secrets/db_name
+            echo "${{ secrets.DOCKER_DB_PASSWORD }}" > ./secrets/db_password
+            echo "${{ secrets.DOCKER_DB_USER }}" > ./secrets/db_user
+            echo "${{ secrets.DOCKER_MAIL_ACCOUNT_PASSWORD }}" > ./secrets/mail_account_password
+            echo "${{ secrets.DOCKER_REDIS_PASSWORD }}" > ./secrets/redis_password
+            echo "${{ secrets.DOCKER_SESSION_SECRET }}" > ./secrets/session_secret
             make start
 
   release:
